k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper
  namespace: beekeeper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beekeeper
  template:
    metadata:
      labels:
        app: beekeeper
    spec:
      containers:
      - name: beekeeper
        image: mawlstace/beekeeper-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        # securityContext:
        #   runAsNonRoot: true
        #   runAsUser: 1000
        #   allowPrivilegeEscalation: false
        #   capabilities:
        #     drop:
        #       - ALL
