k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-service
  namespace: beekeeper
spec:
  selector:
    app: beekeeper
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
